--- a/stylesheets/syntax-variables.less
+++ b/stylesheets/syntax-variables.less
@@ -1,7 +1,7 @@
 // General colors
 @syntax-text-color: #181818;
 @syntax-cursor-color: #181818;
-@syntax-selection-color: #b7dce8;
+@syntax-selection-color: rgba(88, 139, 155, 0.55);
 @syntax-background-color: #fdfdfd;
 
 // Guide colors
@@ -21,7 +21,7 @@
 
 // For git diff info. i.e. in the gutter
 // These are static and were not extracted from your textmate theme
-@syntax-color-renamed: #96CBFE;
-@syntax-color-added: #A8FF60;
-@syntax-color-modified: #E9C062;
-@syntax-color-removed: #CC6666;
+@syntax-color-renamed: #96cbfe;
+@syntax-color-added: #a8ff60;
+@syntax-color-modified: #e9c062;
+@syntax-color-removed: #cc6666;
